--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -5909,8 +5909,8 @@ At a given time step:
 ***** Suggested algorithm
 
 - Detecting Frontier Cells :: iterate through cell pairs (N/S, E/W),
-  computing their products and early exiting if we get a negative
-  value.
+  computing the products of their $\phi$ values and match when these
+  are negative.
 
 - Invariant :: at each time step, the set of tracked cells is the set
   of cells within 3 cells of a frontier cell using the Chebyshev
@@ -5937,17 +5937,18 @@ At a given time step:
      near it, and decrement their tracking counter by 1. Upon reaching
      0, remove the map entry.
 
-- Open question :: What's an efficient data structure for implementing
-  the reference-counting map? If Python/Cython can provide an
-  efficient primitive map implementation, then use that. Otherwise, a
-  2D array might be a reasonable start, with the downside of not being
-  sparse, which means that iterating over its keys ends up being
-  $O(n^2)$. If that becomes a problem in practice, then we'll have to
-  implement some sort of sparse data structure (I envision a hierarchy
-  of 2D arrays with exponentially increasing resolution, representing
-  a tree-like data structure).
+# TODO: What's an efficient data structure for implementing the
+#       reference-counting map? If Python/Cython can provide an
+#       efficient primitive map implementation, then use that.
+#       Otherwise, a 2D array might be a reasonable start, with the
+#       downside of not being sparse, which means that iterating over
+#       its keys ends up being $O(n^2)$. If that becomes a problem in
+#       practice, then we'll have to implement some sort of sparse
+#       data structure (I envision a hierarchy of 2D arrays with
+#       exponentially increasing resolution, representing a tree-like
+#       data structure).
 
-#+name: identify-perimeter-cells-from-phi-field
+#+name: phi-field-perimeter-tracking
 #+begin_src python
 def opposite_phi_signs(phi_matrix, y1, x1, y2, x2):
     """
@@ -5956,78 +5957,25 @@ def opposite_phi_signs(phi_matrix, y1, x1, y2, x2):
     return phi_matrix[y1, x1] * phi_matrix[y2, x2] < 0.0
 
 
-def identify_frontier_cells(phi_matrix):
+def identify_frontier_cells(phi_matrix, tracked_cells=None):
     """
     TODO: Add docstring
     """
-    frontier_cells = []
-
-    (rows, cols) = phi_matrix.shape
-
-    # Scan interior cells
-    for y in range(1, rows-1):
-        for x in range(1, cols-1):
+    (rows, cols)   = phi_matrix.shape
+    frontier_cells = set()
+    if tracked_cells:
+        for (y, x) in tracked_cells:
             # Compare (north, south) and (east, west) neighboring cell pairs for opposite phi signs
-            if opposite_phi_signs(phi_matrix, y-1, x, y+1, x) or opposite_phi_signs(phi_matrix, y, x+1, y, x-1):
-                frontier_cells.append((y, x))
-
-    # Scan northern edge (non-corner) cells
-    y = 0
-    for x in range(1, cols-1):
-        # Compare (here, south) and (east, west) neighboring cell pairs for opposite phi signs
-        if opposite_phi_signs(phi_matrix, y, x, y+1, x) or opposite_phi_signs(phi_matrix, y, x+1, y, x-1):
-            frontier_cells.append((y, x))
-
-    # Scan southern edge (non-corner) cells
-    y = rows-1
-    for x in range(1, cols-1):
-        # Compare (here, north) and (east, west) neighboring cell pairs for opposite phi signs
-        if opposite_phi_signs(phi_matrix, y, x, y-1, x) or opposite_phi_signs(phi_matrix, y, x+1, y, x-1):
-            frontier_cells.append((y, x))
-
-    # Scan eastern edge (non-corner) cells
-    x = cols-1
-    for y in range(1, rows-1):
-        # Compare (north, south) and (here, west) neighboring cell pairs for opposite phi signs
-        if opposite_phi_signs(phi_matrix, y-1, x, y+1, x) or opposite_phi_signs(phi_matrix, y, x, y, x-1):
-            frontier_cells.append((y, x))
-
-    # Scan western edge (non-corner) cells
-    x = 0
-    for y in range(1, rows-1):
-        # Compare (north, south) and (here, east) neighboring cell pairs for opposite phi signs
-        if opposite_phi_signs(phi_matrix, y-1, x, y+1, x) or opposite_phi_signs(phi_matrix, y, x, y, x+1):
-            frontier_cells.append((y, x))
-
-    # Scan northwestern corner cell
-    y = 0
-    x = 0
-    # Compare (here, south) and (here, east) neighboring cell pairs for opposite phi signs
-    if opposite_phi_signs(phi_matrix, y, x, y+1, x) or opposite_phi_signs(phi_matrix, y, x, y, x+1):
-        frontier_cells.append((y, x))
-
-    # Scan northeastern corner cell
-    y = 0
-    x = cols-1
-    # Compare (here, south) and (here, west) neighboring cell pairs for opposite phi signs
-    if opposite_phi_signs(phi_matrix, y, x, y+1, x) or opposite_phi_signs(phi_matrix, y, x, y, x-1):
-        frontier_cells.append((y, x))
-
-    # Scan southwestern corner cell
-    y = rows-1
-    x = 0
-    # Compare (here, north) and (here, east) neighboring cell pairs for opposite phi signs
-    if opposite_phi_signs(phi_matrix, y, x, y-1, x) or opposite_phi_signs(phi_matrix, y, x, y, x+1):
-        frontier_cells.append((y, x))
-
-    # Scan southeastern corner cell
-    y = rows-1
-    x = cols-1
-    # Compare (here, north) and (here, west) neighboring cell pairs for opposite phi signs
-    if opposite_phi_signs(phi_matrix, y, x, y-1, x) or opposite_phi_signs(phi_matrix, y, x, y, x-1):
-        frontier_cells.append((y, x))
-
-    # Return the list of frontier cells
+            if (opposite_phi_signs(phi_matrix, max(0, y-1), x, min(rows-1, y+1), x) or
+                opposite_phi_signs(phi_matrix, y, min(cols-1, x+1), y, max(0, x-1))):
+                frontier_cells.add((y, x))
+    else:
+        for y in range(rows):
+            for x in range(cols):
+                # Compare (north, south) and (east, west) neighboring cell pairs for opposite phi signs
+                if (opposite_phi_signs(phi_matrix, max(0, y-1), x, min(rows-1, y+1), x) or
+                    opposite_phi_signs(phi_matrix, y, min(cols-1, x+1), y, max(0, x-1))):
+                    frontier_cells.add((y, x))
     return frontier_cells
 
 
@@ -6043,16 +5991,37 @@ def project_buffer(cell, buffer_width, rows, cols):
             for x_ in buffer_range_x]
 
 
-def identify_tracked_cells(phi_matrix, buffer_width):
+def identify_tracked_cells(frontier_cells, buffer_width, matrix_shape):
     """
     TODO: Add docstring
     """
-    (rows, cols)   = phi_matrix.shape
-    frontier_cells = identify_frontier_cells(phi_matrix)
-    tracked_cells  = {}
+    (rows, cols)  = matrix_shape
+    tracked_cells = {}
     for cell in frontier_cells:
         for buffer_cell in project_buffer(cell, buffer_width, rows, cols):
             tracked_cells[buffer_cell] = tracked_cells.get(buffer_cell, 0) + 1
+    return tracked_cells
+
+
+def update_tracked_cells(tracked_cells, frontier_cells_old, phi_matrix_new, buffer_width):
+    """
+    TODO: Add docstring
+    """
+    (rows, cols)           = phi_matrix_new.shape
+    frontier_cells_new     = identify_frontier_cells(phi_matrix_new, tracked_cells)
+    frontier_cells_added   = frontier_cells_new.difference(frontier_cells_old)
+    frontier_cells_dropped = frontier_cells_old.difference(frontier_cells_new)
+    # Increment reference counters for all cells within buffer_width of the added frontier cells
+    for cell in frontier_cells_added:
+        for buffer_cell in project_buffer(cell, buffer_width, rows, cols):
+            tracked_cells[buffer_cell] = tracked_cells.get(buffer_cell, 0) + 1
+    # Decrement reference counters for all cells within buffer_width of the dropped frontier cells
+    for cell in frontier_cells_dropped:
+        for buffer_cell in project_buffer(cell, buffer_width, rows, cols):
+            tracked_cells[buffer_cell] -= 1
+            if tracked_cells[buffer_cell] == 0:
+                tracked_cells.pop(buffer_cell)
+    # Return updated tracked cells
     return tracked_cells
 #+end_src
 
