Fixed units error in late integration of the limited and unlimited phi gradients

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -6027,6 +6027,10 @@ def update_tracked_cells(tracked_cells, frontier_cells_old, frontier_cells_new, 
 
 *** Spread Phi Field
 
+# TODO: Include Val's proof for late integration of the limited and unlimited phi gradients in dphi/dt.
+
+$\hat{\nabla} \varphi \cdot U = (\hat{\nabla} \varphi \cdot \frac{\ddot{\nabla} \varphi}{|\ddot{\nabla} \varphi|}) (\frac{\ddot{\nabla} \varphi}{|\ddot{\nabla} \varphi|}\cdot U) = (\hat{\nabla} \varphi \cdot \frac{\ddot{\nabla} \varphi}{|\ddot{\nabla} \varphi|^2}) (\ddot{\nabla} \varphi \cdot U)$
+
 #+name: spread-phi-field
 #+begin_src python
 import numpy as np
@@ -6112,7 +6116,7 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
         phi_magnitude = vu.vector_magnitude(phi_gradient_xy)
         if phi_magnitude > 0.0:
             phi_gradient_xy_limited = calc_phi_gradient(phi_matrix, *phi_gradient_xy, cell_width, cell_height, x, y)
-            fire_behavior["dphi_dt"] *= np.dot(phi_gradient_xy, phi_gradient_xy_limited) / phi_magnitude
+            fire_behavior["dphi_dt"] *= np.dot(phi_gradient_xy, phi_gradient_xy_limited) / (phi_magnitude ** 2.0)
 
         # Store fire behavior values for later use
         fire_behavior_dict[cell_index] = fire_behavior
@@ -6154,7 +6158,8 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
         if phi_magnitude > 0.0:
             phi_gradient_xy_star_limited = calc_phi_gradient(phi_star_matrix, *phi_gradient_xy_star,
                                                              cell_width, cell_height, x, y)
-            fire_behavior_star["dphi_dt"] *= np.dot(phi_gradient_xy_star, phi_gradient_xy_star_limited) / phi_magnitude
+            fire_behavior_star["dphi_dt"] *= (np.dot(phi_gradient_xy_star, phi_gradient_xy_star_limited) /
+                                              (phi_magnitude ** 2.0))
 
         # Calculate the new phi value at time (start_time + dt) as phi_next
         fire_behavior     = fire_behavior_dict[cell_index]
